--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "browserfs": "^1.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-h5-audio-player": "^3.9.1",
     "react-scripts": "5.0.1",
     "react-webcam": "^7.2.0",
     "web-vitals": "^2.1.4"
